# gopro_manager_pi

./: .gitignore  README.md  TESTS.md  install.sh  setup.sh  uninstall.sh
gopro_control/: setup.cfg  setup.py
gopro_control/gopro_control/core/: __init__.py  camera.py  cli.py  settings.py
gopro_control/gopro_control/nodes/: gopro_manager_node.py  pi_menu_node.py
gopro_control/launch/: gopro.launch.py
gopro_control/params/: gopro_params.yaml
gopro_control/resource/: gopro_control
gopro_msgs/: package.xml
gopro_msgs/msg/: GoProStatus.msg  GoProSystem.msg
host/: README.md  download.sh  fastdds_udp_only.xml  gopro.sh  gopro_ctl.sh  gopro_delete.py  gopro_download.py  manager_down.sh  manager_log.sh  manager_logfile.sh  manager_up.sh  menu.sh  revive.sh
host/systemd/: gopro-autorevive.service.in  gopro-logfile.service.in  gopro-manager.service.in
ros2_pkgs/gopro_control/: package.xml  setup.py
ros2_pkgs/gopro_control/gopro_control/core/: camera.py  cli.py  settings.py
ros2_pkgs/gopro_control/gopro_control/nodes/: gopro_manager_node.py  pi_menu_node.py
ros2_pkgs/gopro_control/params/: gopro_params.yaml
ros2_pkgs/gopro_msgs/: CMakeLists.txt
ros2_pkgs/gopro_msgs/msg/: GoProStatus.msg  (+1 more)
scripts/: README.md  download.sh  fastdds_udp_only.xml  gopro-autorevive.service  gopro-manager.service  gopro.sh  gopro_bench.py  gopro_delete.py  gopro_download.py  install_service.sh  manager_down.sh  manager_up.sh  menu.sh  mp4meta.py  revive.sh
scripts/rectest/: campoll.py  log_start.sh  log_stop.sh
tests/: README.md  mission.sh  run_tests.sh  test_all.py
(+1 files in other folders)
